src/misc/bundle.h

/*****************************************************************
 * Binary Packet Interface - Packet structures:
 *
 * Binary packets are buffered using bdl_packet_t structures.
 * These structures and their associated buffers can be
 * statically declared or dynamically allocated.  The application
 * should declare or allocate a bdl_packet_t struct and a buffer,
 * then call bdl_packet_init_buf() once to associate the buffer
 * with the struct.
 *
 * The caller owns both the bdl_packet_t struct and its associated
 * data buffer for the lifetime of the application.  The bundle
 * machinery temporarily takes ownership during transmit or receive
 * (while state != BP_IDLE) and returns it when the operation
 * completes.  The caller may access the data buffer directly
 * when state == BP_IDLE.
 *
 * 'bdl_packet_init_buf(*p, *buf, len)' initializes packet 'p'
 * to use buffer 'buf' which must be of length 'len' (2 to 254
 * bytes).  The usable payload is 2 bytes less than 'len', to
 * allow for the 16-bit CRC that is added on transmit.
 *
 * The application should never directly access the packet struct;
 * getters and setters are provided for members that the API might
 * need to access.
 *
 * The application must never access a packet or its data buffer
 * unless 'bdl_packet_get_state()' returns BP_IDLE.
 *
 */

 typedef enum {
    BP_NOT_READY = 0,
    BP_IDLE,
    BP_RX_WAIT, BP_RX_BUSY, BP_RX_DONE,
    BP_TX_WAIT, BP_TX_BUSY
} bdl_packet_state_t;
typedef struct bdl_packet_s {
    uint8_t cobs_byte;          // overhead byte generated by COBS encode
    uint8_t data_len;           // actual data length (not counting COBS byte)
    uint8_t buf_len;            // size of the buffer at *data
    uint8_t chan;               // packet channel num - private
    bdl_packet_state_t state;   // packet buffer state - private
    uint8_t *data;              // pointer to the actual data
    struct bdl_packet_s *next;  // used for buffer list management - private
    struct bdl_packet_s *prev;  // used for buffer list management - private
    void (*callback)(struct bdl_packet_s *p);  // packet completion - private
} bdl_packet_t;
void bdl_packet_init_buf(bdl_packet_t *p, uint8_t *buf, uint8_t len);
void bdl_packet_set_chan(bdl_packet_t *p, uint8_t chan);
void bdl_packet_set_len(bdl_packet_t *p, uint8_t len);
/*****************************************************************
 * Core Data Structures:
 *
 * The transmit and receive functions are completely decoupled.
 * Transmitting is done by a bdl_tx_t object, while receiving
 * is done by a bdl_rx_t object.  Each stands alone, although
 * they are often used in pairs.
 *
 */

typedef enum {
    BDL_TX_NOT_READY = 0,
    BDL_TX_STRING_MODE,
    BDL_TX_SEND_COBS_BYTE,
    BDL_TX_SEND_DATA_BYTE
} bdl_tx_state_t;
// all fields are private; use bdl_* functions to access
typedef struct bdl_tx_s {
    volatile uint8_t   *string_buf;
    uint32_t            string_buf_size;
    uint32_t            string_in;
    uint32_t            string_out;
    void              (*string_not_full)(void);
    bdl_packet_t        pkt_root;
    bdl_packet_t       *pkt_current;
    uint8_t             pkt_data_index;
    bdl_tx_state_t      tx_state;
    uint16_t          (*crc16)(uint16_t seed, const uint8_t *data, uint8_t len);
    void              (*tx_bytes_available)(void);
} bdl_tx_t;
typedef enum {
    BDL_RX_NOT_READY = 0,
    BDL_RX_STRING_MODE,
    BDL_RX_DISCARD_PACKET,
    BDL_RX_GET_COBS_BYTE,
    BDL_RX_GET_DATA_BYTE
} bdl_rx_state_t;
// all fields are private; use bdl_* functions to access
typedef struct bdl_rx_s {
    volatile uint8_t   *string_buf;
    uint32_t            string_buf_size;
    uint32_t            string_in;
    uint32_t            string_out;
    void              (*string_avail)(void);
    bdl_packet_t        pkt_root;
    bdl_packet_t       *pkt_current;
    uint8_t             pkt_byte_count;
    bdl_rx_state_t      rx_state;
    uint32_t            error_count;
    uint16_t          (*crc16)(uint16_t seed, const uint8_t *data, uint8_t len);
} bdl_rx_t;
/*****************************************************************
 * Setup
 *
 * Both transmit and receive objects need setup before they can
 * be used.  Both require string buffers, the location and size
 * of which are determined by the user.  Optional string buffer
 * callbacks are also available and configured during setup.
 * See the "String Interface" section below for more details.
 *
 * Both transmit and receive objects need a pointer to a CRC
 * computation function.  See the "CRC Computation" section
 * below for more details.
 *
 * The transmit object supports an optional 'tx_bytes_available'
 * callback as part of the hardware interface.  See the "Hardware
 * Interface" section below for details.
 * 
 * To initialize each object, declare instances of the structs
 * below, set their values, and call the init functions.
 * 
 * Example:
 *
 *   static uint8_t tx_buf[256];
 *   static bdl_tx_t my_tx;
 *
 *   const bdl_tx_config_t my_tx_cfg = {
 *       .string_buf          = tx_buf,
 *       .string_buf_size     = sizeof(tx_buf),
 *       .string_not_full     = NULL,
 *       .crc16               = bdl_crc16_lookup,
 *       .tx_bytes_available  = my_uart_start_tx
 *   };
 *   bdl_init_tx(&my_tx, &my_tx_cfg);
 * 
 */

typedef struct {
    uint8_t   *string_buf;
    size_t     string_buf_size;
    void     (*string_not_full)(void);
    uint16_t (*crc16)(uint16_t seed, const uint8_t *data, uint8_t len);
    void     (*tx_bytes_available)(void);
} bdl_tx_config_t;
void bdl_init_tx(bdl_tx_t *bdl, const bdl_tx_config_t *cfg);
typedef struct {
    uint8_t   *string_buf;
    size_t     string_buf_size;
    void     (*string_avail)(void);
    uint16_t (*crc16)(uint16_t seed, const uint8_t *data, uint8_t len);
} bdl_rx_config_t;
void bdl_init_rx(bdl_rx_t *bdl, const bdl_rx_config_t *cfg);
/*****************************************************************
 * String Interface:
 *
 * The module uses separate receive and transmit buffers.
 * The buffers are provided by the user during setup; see
 * the Setup section above.
 *
 * The buffers support optional callbacks which can be set
 * by setting the appropriate field in the 'bdl_xx_config_t'
 * structure and then calling 'bdl_xx_init()' with the struct.
 *
 * The receiver's 'string_avail()' callback will be called when
 * 'bdl_put_rx_byte()' places a byte in the buffer.  The
 * transmitter's 'string_not_full()' callback will be called
 * when 'bdl_get_tx_byte()' removes a byte from the buffer.
 * Both callbacks are called in the context of the hardware
 * interface functions and thus should be thread-safe or
 * ISR-safe depending on the hardware layer implementation.
 *
 * The receive buffer is designed to feed a single consumer,
 * and the transmit buffer is designed to be fed by a single
 * source.  The following functions are not necessarily
 * re-entrant or thread-safe:
 *
 */

// non-blocking read - returns 'BDL_NO_DATA' if no data available
uint32_t bdl_string_get_nb(bdl_rx_t *bdl);
// blocking read - busy waits if no data available
char bdl_string_get_bl(bdl_rx_t *bdl);
// returns true if data is available
bool bdl_string_can_get(bdl_rx_t *bdl);
// non-blocking write - returns false and discards 'c' if buffer full
bool bdl_string_put_nb(bdl_tx_t *bdl, char c);
// blocking write - busy waits if buffer full
void bdl_string_put_bl(bdl_tx_t *bdl, char c);
// returns true if buffer not full
bool bdl_string_can_put(bdl_tx_t *bdl);
 /*****************************************************************
 * Binary Packet Interface - Sending and Receiving:
 *
 * To send a packet, write data into the buffer, call the setter
 * functions for data length and channel number (if needed), then
 * call 'bdl_packet_put()'.
 *
 * 'bdl_packet_put()' will compute and append a CRC, queue the
 * packet for transmission, set the state to 'BP_TX_WAIT' and
 * return.  The packet state will later cycle through 'BP_TX_BUSY'
 * and eventually become 'BP_IDLE' at which point the packet has
 * been transmitted and the structure and buffer may be reused.
 *
 * If the 'callback' argument of 'bdl_packet_put' was non-NULL,
 * the callback will be called from 'bdl_get_tx_byte()' with a
 * pointer to the completed packet when 'bdl_get_tx_bytes()'
 * consumes the last byte of the packet.  Since the callback is
 * called in the context of the hardware interface function, it
 * should be thread-safe or ISR-safe depending on the hardware
 * layer implementation.
 *
 * The transmit process will not change data length or channel
 * number, so to send repeat packets of the same length to the
 * same channel the application can just call 'bdl_packet_put()'
 * each time.
 *
 * To receive a packet, call the channel number setter function
 * (if needed), then call 'bdl_packet_listen()'.
 *
 * 'bdl_packet_listen()' adds the packet to the receiver queues,
 * zeros 'data_len', sets the state to 'BP_RX_WAIT', then returns.
 * If/when a matching packet arrives, the state will cycle through
 * 'BP_RX_BUSY' and eventually become 'BP_RX_DONE'.
 *
 * If the 'callback' argument of 'bdl_packet_listen' was non-NULL,
 * the callback will be called from 'bdl_put_rx_byte()' with a
 * pointer to the newly received packet when 'bdl_put_rx_byte()'
 * stores the last byte of the packet.  Since the callback is
 * called in the context of the hardware interface function, it
 * should be thread-safe or ISR-safe depending on the hardware
 * layer implementation.
 *
 * Once the state is 'BP_RX_DONE', call 'bdl_packet_get()' to
 * decode the data, check the CRC, and set the state to 'BP_IDLE'.
 * If a CRC error occurs, 'bdl_packet_get()' will return FALSE and
 * the error counter will be incremented.
 * If 'bdl_packet_get()' returns TRUE, the structure and buffer
 * contain valid data that can be read.  Call the data length
 * getter to determine how many bytes are available in the buffer.
 * 
 * Regardless of the 'bdl_packet_get()' return value, the packet
 * state will become BP_IDLE, and it can be re-used for transmit
 * or receive.  The receive process will not change the channel,
 * so to repeatedly listen for packets on the same channel the
 * application can just call 'bdl_packet_listen()' each time.
 *
 */

void bdl_packet_put(bdl_tx_t *bdl, bdl_packet_t *p,
                     void (*callback)(struct bdl_packet_s *p));
void bdl_packet_listen(bdl_rx_t *bdl, bdl_packet_t *p,
                     void (*callback)(struct bdl_packet_s *p));
bool bdl_packet_get(bdl_rx_t *bdl, bdl_packet_t *p);
/*****************************************************************
 * CRC Computation:
 *
 * All binary packets have CRCs added on transmit
 * and checked on receive.
 *
 * For interoperability with the Python implementation, the CRC
 * must use the CCITT CRC-16 variant, polynomial 0x1021, and
 * accept an arbitrary seed; bundle.c uses a unique seed for
 * each packet channel.
 *
 * This module provides two implementations of that CRC calculation:
 *    bdl_crc16_bitwise() - uses a bitwise approach, slower but smaller
 *    bdl_crc16_lookup()  - uses a 512-byte lookup table, faster
 *
 * The caller can also provide their own implementation, which
 * is especially valuable when the target MCU provides hardware
 * accelerated CRC computation.  The CRC implementation is chosen
 * by setting a function pointer in the bdl_xx_config_t structure
 * and calling bdl_xx_init() with the structure.
 *
 */

uint16_t bdl_crc16_bitwise(uint16_t seed, const uint8_t *data, uint8_t len);
uint16_t bdl_crc16_lookup(uint16_t seed, const uint8_t *data, uint8_t len);
 /*****************************************************************
 * Receive Error Counter:
 *
 * The receive object maintains a count of errors.  The receiver
 * detects multiple errors including framing, overrun, CRC, and
 * corrupted packet header/data/terminator bytes.
 *
 * The string channel does not have error checking; wire errors
 * can change string bytes, cause binary data to be treated
 * as string, or cause string data to be considered as binary
 * (and thus probably be discarded as a bad packet).
 * Returned string data will not contain 0x00 or any value
 * greater than 0x7F.
 */

uint32_t bdl_get_error_count(bdl_rx_t *bdl);
void bdl_reset_error_count(bdl_rx_t *bdl);
/*****************************************************************
 * Hardware Interface
 *
 * This module is hardware agnostic, but it is designed with
 * an interrupt driven UART in mind.  It provides the following
 * two functions:
 *
 * 'bdl_put_rx_byte()' should be called by the hardware driver
 * when a byte is received; typically from a "receive data
 * available" interrupt handler.  This function can run in
 * interrupt context and places the received byte into the
 * appropriate incoming data buffer.
 *
 * 'bdl_get_tx_byte()' should be called by the hardware driver,
 * typically from a "transmit buffer empty" interrupt handler.
 * This function can run in interrupt context and will either
 * return 0-255 as the byte to send, or 'BDL_NO_DATA' if there
 * is no data in any outgoing buffer.
 *
 * When bdl_get_tx_byte() returns 'BDL_NO_DATA', the hardware
 * driver will typically disable the transmit interrupt.
 *
 * The driver can provide an optional callback at setup that
 * can be used to re-enable an interrupt or otherwise resume
 * transmission when data becomes available.  If callback
 * 'tx_bytes_available' is non-NULL, it will be called from
 * 'bdl_string_put_xx()' or 'bdl_packet_put()' after the 'put'
 * function has written byte(s) to the output buffer.
 * 
 * The callback can re-enable a 'transmitter-ready' interrupt,
 * which in turn would repeatedly invoke 'bdl_get_tx_byte()'
 * until it again returns 'BDL_NO_DATA', at which time the
 * interrupt would be disabled.  Or, for a polled system it
 * could simply call 'bdl_get_tx_byte()' repeatedly until it
 * again returns 'BDL_NO_DATA'.  In any case, if the callback
 * blocks, then 'bdl_string_put_xx()' or 'bdl_packet_put()'
 * will also block.
 */

void bdl_put_rx_byte(bdl_rx_t *bdl, uint8_t data);
uint32_t bdl_get_tx_byte(bdl_tx_t *bdl);